massive changes to site

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 Concord Limo LLC — Website Source
 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
-Built & maintained by: Max Eldabbas
-Contact: maxeldabbas86@gmail.com
+Built & maintained by: MaxWayStudio
+Contact: maxwaystudio@gmail.com
 GitHub: github.com/maxeld1
 
 License: Proprietary
@@ -17,7 +17,7 @@ Notes for future edits
 
 BRAND
 • Company Name: Concord Limo LLC
-• Tagline: (example) “Private rides for any event.”
+• Tagline: “Private rides for any event.”
 • Primary Fleet: Cadillac SUV + Sprinter Vans
 • Service Area: (cities/region)
 
@@ -42,14 +42,14 @@ SEO
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>Concord Limo | Private Chauffeur & Event Transportation</title>
-  <meta name="description" content="Private rides for any event—Cadillac SUV and Sprinter vans available. Professional drivers, flexible pickup times, and fast quotes. Serving the greater Philadelphia area." />
+  <title>Concord Limo | Chauffeur-Driven Transportation in Philadelphia</title>
+  <meta name="description" content="Chauffeur-driven rides for Philadelphia and surrounding areas. Luxury SUV and Sprinter van options for events, airports, and group travel. Fast quotes by text." />
 
   <link rel="icon" href="assets/icons/concord-favicon.png" type="image/png" />
   <link rel="stylesheet" href="css/style.css" />
 
-  <meta property="og:title" content="Concord Limo | Private Chauffeur & Event Transportation" />
-  <meta property="og:description" content="Private rides for any event—Cadillac SUV and Sprinter vans available. Fast quotes and professional service." />
+  <meta property="og:title" content="Concord Limo | Chauffeur-Driven Transportation in Philadelphia" />
+  <meta property="og:description" content="Luxury SUV and Sprinter van options for events, airports, and group travel. Fast quotes by text in Philadelphia and surrounding areas." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="" />
   <meta property="og:image" content="assets/images/og-concord.jpg" />
@@ -60,9 +60,9 @@ SEO
       "@type": "LocalBusiness",
       "name": "Concord Limo LLC",
       "description": "Private chauffeur and event transportation with Cadillac SUV and Sprinter van options.",
-      "telephone": "+1-610-547-7845",
+      "telephone": "+1-610-547-1325",
       "priceRange": "$$",
-      "areaServed": "Greater Philadelphia Area",
+      "areaServed": "Philadelphia and surrounding areas",
       "address": {
         "@type": "PostalAddress",
         "addressLocality": "Broomall",
@@ -100,32 +100,38 @@ SEO
           alt="Concord Limo Logo"
           class="brand-logo brand-bigger hero-logo"
         />
-        <div class="kicker">Greater Philadelphia</div>
-        <h1 class="main-title">Private Chauffeur & Event Transportation</h1>
+        <div class="kicker">Philadelphia + surrounding areas</div>
+        <h1 class="main-title">Chauffeur-driven rides for Philadelphia's biggest moments.</h1>
         <p class="page-body">
-          Private transportation for any event — Luxury SUV and Sprinter van
-          options for groups of any size.
+          Luxury SUV and Sprinter van service for airport runs, events, and group
+          nights out. Fast, personal quotes by text.
         </p>
 
         <div class="hero-actions">
-          <a class="btn btn-primary" href="contact/" aria-label="Request a quote">
-            Request a Quote
+          <a class="btn btn-primary" href="sms:+16105471325?body=Hi%20Concord%20Limo%2C%20I%27d%20like%20a%20quote%20for%20a%20ride%20in%20Philadelphia." aria-label="Text for a quote">
+            Text for Quote
           </a>
-          <a class="btn btn-glass" href="services/" aria-label="View services">
-            View Services
+          <a class="btn btn-glass" href="fleet/" aria-label="View fleet">
+            View Fleet
           </a>
         </div>
 
+        <div class="hero-contact">
+          <span class="muted">Text:</span>
+          <a href="sms:+16105471325"> (610) 547-1325</a>
+        </div>
+
         <div class="hero-trust">
-          <span>Professional drivers</span>
+          <span>Licensed and insured</span>
           <span class="dot">•</span>
-          <span>Flexible pickup times</span>
+          <span>Professional chauffeurs</span>
           <span class="dot">•</span>
-          <span>Fast responses</span>
+          <span>Fast response times</span>
         </div>
       </div>
     </div>
   </section>
+
   <section class="section">
     <div class="container">
       <h2 class="section-title">Services</h2>
@@ -133,17 +139,88 @@ SEO
       <div class="grid three services-grid">
         <div class="card card-center">
           <h3>Event Transportation</h3>
-          <p class="muted">Concerts, sports games, birthdays, nights out—arrive together and leave on your schedule.</p>
+          <p class="muted">Concerts, sports games, birthdays, nights out - arrive together and leave on your schedule.</p>
         </div>
 
         <div class="card card-center">
           <h3>Airport & Travel</h3>
-          <p class="muted">Reliable pickups and drop-offs with flight-aware timing and luggage-friendly space.</p>
+          <p class="muted">Reliable pickups and drop-offs with flight-aware timing and luggage-ready space.</p>
         </div>
 
         <div class="card card-center">
           <h3>Group Rides</h3>
-          <p class="muted">Cadillac SUV for smaller groups, Sprinter vans available for larger parties.</p>
+          <p class="muted">Cadillac SUV for smaller groups, Sprinter vans for larger parties.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="section fleet">
+    <div class="container">
+      <h2 class="section-title">Fleet</h2>
+
+      <div class="grid two fleet-grid">
+        <div class="vehicle-card">
+          <div class="vehicle-preview suv" aria-hidden="true"></div>
+          <div class="vehicle-body">
+            <h3>Cadillac Luxury SUV</h3>
+            <p class="muted">Quiet, private rides for airport transfers and nights out.</p>
+            <div class="chip-row">
+              <span class="chip">Seats 1-6</span>
+              <span class="chip">Luggage friendly</span>
+              <span class="chip">Tinted privacy glass</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="vehicle-card">
+          <div class="vehicle-preview sprinter" aria-hidden="true"></div>
+          <div class="vehicle-body">
+            <h3>Mercedes Sprinter Van</h3>
+            <p class="muted">Roomy, group-ready transportation for events and celebrations.</p>
+            <div class="chip-row">
+              <span class="chip">Seats 7-14</span>
+              <span class="chip">Event-ready</span>
+              <span class="chip">Extra luggage space</span>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="section-cta">
+        <a class="btn btn-primary" href="sms:+16105471325?body=Hi%20Concord%20Limo%2C%20I%27d%20like%20a%20quote%20for%20a%20ride%20in%20Philadelphia.">
+          Text for Quote
+        </a>
+      </div>
+    </div>
+  </section>
+
+  <section class="section">
+    <div class="container">
+      <h2 class="section-title">Service Area</h2>
+
+      <div class="grid two area-grid">
+        <div class="card">
+          <h3>Philadelphia + Surrounding Areas</h3>
+          <p class="muted">Serving Center City, Main Line, Delaware County, Montgomery County, and airport transfers.</p>
+          <div class="area-list">
+            <span>Center City</span>
+            <span>South Philly</span>
+            <span>Main Line</span>
+            <span>Delaware County</span>
+            <span>Montgomery County</span>
+            <span>Philadelphia Airport</span>
+          </div>
+        </div>
+
+        <div class="card">
+          <h3>How It Works</h3>
+          <ul>
+            <li>Text your pickup, drop-off, date, and party size.</li>
+            <li>We confirm availability and send a fast quote.</li>
+            <li>Lock it in and ride with a professional chauffeur.</li>
+          </ul>
+          <div class="card-note">Most quotes delivered within minutes.</div>
         </div>
       </div>
     </div>
@@ -169,7 +246,7 @@ SEO
       </div>
 
       <div class="reviews-cta" style="margin-top:22px;">
-        <a class="btn btn-primary" href="contact/">Get Pricing</a>
+        <a class="btn btn-primary" href="sms:+16105471325?body=Hi%20Concord%20Limo%2C%20I%27d%20like%20a%20quote%20for%20a%20ride%20in%20Philadelphia.">Text for Quote</a>
       </div>
     </div>
   </section>
