--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,7 +1,6 @@
 <!--
   Developed by: Max Eldabbas (maxeldabbas86@gmail.com)
   Repo: https://github.com/maxeld1
-  Created: 2026-01-26
   License: Proprietary — Not for redistribution without permission.
 -->
 <!doctype html>
@@ -10,43 +9,33 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>Concord Limo | Contact</title>
-  <meta name="description" content="Concord Limo — private ride service for airport transfers, nights out, corporate travel, and group transportation. Request a quote or contact us to book." />
+  <meta name="description" content="Text Concord Limo for a fast quote in Philadelphia and surrounding areas. Luxury SUV and Sprinter van service for events, airports, and group travel." />
 
-  <link rel="icon" href="../assets/icons/favicon.ico" />
-  <link rel="manifest" href="../manifest.webmanifest" />
+  <link rel="icon" href="../assets/icons/concord-favicon.png" type="image/png" />
   <link rel="stylesheet" href="../css/style.css" />
 
-  <meta property="og:title" content="Concord Limo — Private Ride Service" />
-  <meta property="og:description" content="Premium private rides for airport, corporate, and group transportation. Request a quote or contact us to book." />
+  <meta property="og:title" content="Concord Limo | Contact" />
+  <meta property="og:description" content="Text for a fast quote in Philadelphia and surrounding areas. Luxury SUV and Sprinter van options." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="" />
   <meta property="og:image" content="" />
 
-  <!-- LocalBusiness schema (use what you have; update fields when confirmed) -->
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
-      "name": "Concord Limo",
-      "description": "Private ride service offering airport transfers, corporate travel, and group transportation.",
-      "telephone": "(610) 547-7845",
+      "name": "Concord Limo LLC",
+      "description": "Chauffeur-driven transportation for events, airport transfers, and group travel.",
+      "telephone": "+1-610-547-1325",
       "priceRange": "$$",
+      "areaServed": "Philadelphia and surrounding areas",
       "address": {
         "@type": "PostalAddress",
-        "streetAddress": "",
         "addressLocality": "Broomall",
         "addressRegion": "PA",
         "postalCode": "19008",
         "addressCountry": "US"
-      },
-      "areaServed": {
-        "@type": "AdministrativeArea",
-        "name": "Greater Philadelphia Area"
-      },
-      "url": "",
-      "sameAs": [
-        ""
-      ]
+      }
     }
   </script>
 </head>
@@ -54,100 +43,83 @@
 <body class="contact-page">
 <div data-include="header"></div>
 
-<main class="section">
-  <div class="container grid two">
-
-    <!-- LEFT: Contact info -->
-    <div class="contact-info">
-      <h1 class="page-title">CONTACT</h1>
-      <p class="page-body" style="max-width: 520px;">
-        Request a quote or reach out directly. Tell us your pickup location, destination,
-        date/time, number of passengers, and vehicle preference (SUV or Sprinter).
-      </p>
-
-      <!-- Phone -->
-      <div class="contact-item">
-        <svg class="contact-icon" viewBox="0 0 24 24" aria-hidden="true">
-          <path d="M22 16.9v2.1a2 2 0 0 1-2.2 2 19 19 0 0 1-8.3-3.3 18.6 18.6 0 0 1-5.8-5.8A19 19 0 0 1 2.4 3.6 2 2 0 0 1 4.4 1.4h2.1A2 2 0 0 1 8.5 3l.5 2.3a2 2 0 0 1-.5 1.8L7 8.6a15.5 15.5 0 0 0 8.4 8.4l1.5-1.5a2 2 0 0 1 1.8-.5l2.3.5a2 2 0 0 1 1.5 1.4Z"/>
-        </svg>
-        <span class="contact-text">
-            <a href="tel:+16105477845">(610) 547-7845</a>
-            <span style="display:block; font-size:.95rem; opacity:.75; margin-top:4px;">
-              Call or text for fastest response
-            </span>
-          </span>
+<main>
+  <section class="section page-hero">
+    <div class="container">
+      <div class="kicker">Philadelphia + surrounding areas</div>
+      <h1 class="page-title">Text for a Quote</h1>
+      <p class="page-lead">Send your trip details and we will reply with pricing and availability fast.</p>
+      <div class="hero-actions">
+        <a class="btn btn-primary" href="sms:+16105471325?body=Hi%20Concord%20Limo%2C%20I%27d%20like%20a%20quote%20for%20a%20ride%20in%20Philadelphia.">Text (610) 547-1325</a>
+        <a class="btn btn-glass" href="mailto:concordlimo@email.com">Email Us</a>
       </div>
+    </div>
+  </section>
 
-      <!-- Email -->
-      <div class="contact-item">
-        <svg class="contact-icon" viewBox="0 0 24 24" aria-hidden="true">
-          <rect x="3" y="5" width="18" height="14" rx="2"/>
-          <path d="M3 7l9 6 9-6"/>
-        </svg>
-        <span class="contact-text">
+  <section class="section">
+    <div class="container grid two contact-grid">
+      <div class="contact-info">
+        <div class="contact-item">
+          <svg class="contact-icon" viewBox="0 0 24 24" aria-hidden="true">
+            <path d="M22 16.9v2.1a2 2 0 0 1-2.2 2 19 19 0 0 1-8.3-3.3 18.6 18.6 0 0 1-5.8-5.8A19 19 0 0 1 2.4 3.6 2 2 0 0 1 4.4 1.4h2.1A2 2 0 0 1 8.5 3l.5 2.3a2 2 0 0 1-.5 1.8L7 8.6a15.5 15.5 0 0 0 8.4 8.4l1.5-1.5a2 2 0 0 1 1.8-.5l2.3.5a2 2 0 0 1 1.5 1.4Z"/>
+          </svg>
+          <span class="contact-text">
+            <a href="sms:+16105471325">Text (610) 547-1325</a>
+            <span class="contact-note">Fast response during operating hours</span>
+          </span>
+        </div>
+
+        <div class="contact-item">
+          <svg class="contact-icon" viewBox="0 0 24 24" aria-hidden="true">
+            <rect x="3" y="5" width="18" height="14" rx="2"/>
+            <path d="M3 7l9 6 9-6"/>
+          </svg>
+          <span class="contact-text">
             <a href="mailto:concordlimo@email.com">concordlimo@email.com</a>
-            <span style="display:block; font-size:.95rem; opacity:.75; margin-top:4px;">
-              Include date/time + passenger count
-            </span>
+            <span class="contact-note">Great for detailed itineraries</span>
           </span>
-      </div>
+        </div>
 
-      <!-- Service area -->
-      <div class="contact-item">
-        <svg class="contact-icon" viewBox="0 0 24 24" aria-hidden="true">
-          <path d="M12 2C8.1 2 5 5.1 5 9c0 5.3 7 13 7 13s7-7.7 7-13c0-3.9-3.1-7-7-7z"/>
-          <circle cx="12" cy="9" r="2.5"/>
-        </svg>
-        <span class="contact-text">
-            Greater Philadelphia + surrounding areas
-            <span style="display:block; font-size:.95rem; opacity:.75; margin-top:4px;">
-              Airport transfers • corporate travel • group rides
-            </span>
+        <div class="contact-item">
+          <svg class="contact-icon" viewBox="0 0 24 24" aria-hidden="true">
+            <path d="M12 2C8.1 2 5 5.1 5 9c0 5.3 7 13 7 13s7-7.7 7-13c0-3.9-3.1-7-7-7z"/>
+            <circle cx="12" cy="9" r="2.5"/>
+          </svg>
+          <span class="contact-text">
+            Philadelphia + surrounding areas
+            <span class="contact-note">Airport transfers, events, group rides</span>
           </span>
-      </div>
+        </div>
 
-      <!-- Instagram (optional) -->
-      <div class="contact-item">
-        <svg class="contact-icon" viewBox="0 0 24 24" aria-hidden="true">
-          <rect x="3" y="3" width="18" height="18" rx="5"/>
-          <circle cx="12" cy="12" r="4.2"/>
-          <circle cx="17.2" cy="6.8" r="1"/>
-        </svg>
-        <span class="contact-text">
+        <div class="contact-item">
+          <svg class="contact-icon" viewBox="0 0 24 24" aria-hidden="true">
+            <rect x="3" y="3" width="18" height="18" rx="5"/>
+            <circle cx="12" cy="12" r="4.2"/>
+            <circle cx="17.2" cy="6.8" r="1"/>
+          </svg>
+          <span class="contact-text">
             <a href="#" target="_blank" rel="noopener">@concordlimo</a>
           </span>
+        </div>
       </div>
 
-      <!-- CTA -->
-      <div style="display:flex; gap:12px; justify-content:center; flex-wrap:wrap; margin-top:10px;">
-        <a class="btn btn-primary" href="../contact/">
-          Request a Quote
-        </a>
-        <a class="btn btn-glass" href="tel:+16105477845">
-          Call Now
-        </a>
+      <div class="card">
+        <h3>What to Text Us</h3>
+        <ul>
+          <li>Pickup + drop-off locations</li>
+          <li>Date and time of service</li>
+          <li>Number of passengers</li>
+          <li>Vehicle preference (SUV or Sprinter)</li>
+          <li>Flight details if airport pickup</li>
+        </ul>
+        <div class="card-note">We will confirm availability and send a quote ASAP.</div>
+
+        <div class="contact-cta">
+          <a class="btn btn-primary" href="sms:+16105471325?body=Hi%20Concord%20Limo%2C%20I%27d%20like%20a%20quote%20for%20a%20ride%20in%20Philadelphia.">Text for Quote</a>
+        </div>
       </div>
-
-      <p style="margin-top:14px; font-size:.95rem; opacity:.75; text-align:center; max-width:520px;">
-        Typical quote info: pickup + dropoff, date/time, number of passengers,
-        luggage, and vehicle preference (Cadillac SUV or Sprinter).
-      </p>
     </div>
-
-    <!-- RIGHT: Map / (optional) inquiry embed later -->
-    <div class="card">
-      <iframe
-              src="https://www.google.com/maps?q=Broomall,+PA+19008&output=embed"
-              width="100%"
-              height="420"
-              style="border:0; border-radius:16px;"
-              allowfullscreen=""
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade">
-      </iframe>
-    </div>
-
-  </div>
+  </section>
 </main>
 
 <div data-include="footer"></div>
