--- a/pages/services.html
+++ b/pages/services.html
@@ -1,7 +1,6 @@
 <!--
   Developed by: Max Eldabbas (maxeldabbas86@gmail.com)
-  Repo: https://github.com/maxeld1/industrysalon
-  Created: 2025-12-10
+  Repo: https://github.com/maxeld1
   License: Proprietary — Not for redistribution without permission.
 -->
 <!doctype html>
@@ -9,112 +8,125 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>Industry Salon | Services</title>
-  <meta name="description" content="Industry Salon — modern cuts, color, nails and skincare. Book online or call." />
-  <link rel="icon" href="../assets/icons/favicon.ico" />
-  <link rel="manifest" href="../manifest.webmanifest" />
+  <title>Concord Limo | Services</title>
+  <meta name="description" content="Chauffeur-driven services in Philadelphia for airport transfers, events, corporate travel, and group transportation. Text for a fast quote." />
+
+  <link rel="icon" href="../assets/icons/concord-favicon.png" type="image/png" />
   <link rel="stylesheet" href="../css/style.css" />
-  <meta property="og:title" content="Industry Salon — Hair • Beauty • Nails" />
-  <meta property="og:description" content="Modern salon in [City]. Book online or call." />
+
+  <meta property="og:title" content="Concord Limo | Services" />
+  <meta property="og:description" content="Luxury SUV and Sprinter van service for events, airports, and group travel in Philadelphia." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://example.com" />
-  <meta property="og:image" content="https://example.com/og-image.jpg" />
-  <script type="application/ld+json">
-  {{
-    "@context": "https://schema.org",
-    "@type": "HairSalon",
-    "name": "Industry Salon",
-    "telephone": "(484) 420-4082",
-    "priceRange": "$$",
-    "address": {
-      "@type": "PostalAddress",
-      "streetAddress": "4631 W. Chester Pike",
-      "addressLocality": "Newtown Square",
-      "addressRegion": "PA",
-      "postalCode": "19073",
-      "addressCountry": "US"
-    },
-    "openingHours": ["Mo-Thurs 09:00-20:00","Fri-Sa 08:00-14:00"],
-    "url": "https://www.industrysalonlounge.com",
-    "sameAs": ["https://instagram.com/industrysalonnewtownsquare"]
-  }
-  </script>
+  <meta property="og:url" content="" />
+  <meta property="og:image" content="" />
 </head>
 <body>
 
 <div data-include="header"></div>
 
-<main class="section">
-  <div class="container">
-    <h1 class="page-title">SERVICES & PRICING</h1>
-    <div class="grid three" style="margin-top:10px">
-      <div class="card">
-        <h3>DESIGN</h3>
-        <ul>
-          <li>Bang Trim</li>
-          <li>Kids 10 & Under — $25-$45</li>
-          <li>Men's Haircut — $31-$49</li>
-          <li>Women's Haircut — $43-$85</li>
-        </ul>
-      </div>
-      <div class="card">
-        <h3>COLOR</h3>
-        <ul>
-          <li>Face Framing Foils — $55</li>
-          <li>Full Highlights — $104-$159</li>
-          <li>Glaze/Overlay — $38</li>
-          <li>Partial Highlight — $84-$118</li>
-          <li>Single Process — $53-$83</li>
-        </ul>
-      </div>
-      <div class="card">
-        <h3>HAIR TREATMENTS</h3>
-        <ul>
-          <li>Deep Conditioning Hair Treatment — $20</li>
-          <li>Keratin Hair Treatment — $350</li>
-        </ul>
-      </div>
-      <div class="card">
-        <h3>STYLING</h3>
-        <ul>
-          <li>Blowout — $35-$55</li>
-          <li>Formal Styling — $80-$100</li>
-        </ul>
-      </div>
-      <div class="card">
-        <h3>WAXING/TINTING</h3>
-        <ul>
-          <li>Brow Tint — $17</li>
-          <li>Brow Wax — $26</li>
-          <li>Chin Wax — $15</li>
-          <li>Lash Tint — $35</li>
-          <li>Lip Wax — $16</li>
-        </ul>
-      </div>
-      <div class="card">
-        <h3>BRIDAL & CONSULTATION</h3>
-        <ul>
-          <li>Bridal Hair Trial — $150</li>
-          <li>Day Of Bridal Hair — $200</li>
-          <li>Consultation</li>
-        </ul>
-        <p class="card-note">Please contact us for bridal parties and on-location services.</p>
+<main>
+  <section class="section page-hero">
+    <div class="container">
+      <div class="kicker">Chauffeur-driven transportation</div>
+      <h1 class="page-title">Services for Every Occasion</h1>
+      <p class="page-lead">From airport transfers to group celebrations, we deliver reliable rides across Philadelphia and surrounding areas.</p>
+      <div class="hero-actions">
+        <a class="btn btn-primary" href="sms:+16105471325?body=Hi%20Concord%20Limo%2C%20I%27d%20like%20a%20quote%20for%20a%20ride%20in%20Philadelphia.">Text for Quote</a>
+        <a class="btn btn-glass" href="../fleet/">View Fleet</a>
       </div>
     </div>
+  </section>
 
-    <div class="pricing-note-wrap">
-      <p class="pricing-note">Prices start at each stylist level and may vary based on hair length, thickness, or amount.
-      </p>
+  <section class="section">
+    <div class="container">
+      <h2 class="section-title">Popular Services</h2>
+      <div class="grid three">
+        <div class="card">
+          <h3>Airport Transfers</h3>
+          <p class="muted">Flight-aware pickup timing, luggage-friendly space, and reliable drop-offs.</p>
+          <ul>
+            <li>Philadelphia International Airport</li>
+            <li>Pickup and drop-off coordination</li>
+            <li>Early morning or late-night coverage</li>
+          </ul>
+        </div>
+        <div class="card">
+          <h3>Event Transportation</h3>
+          <p class="muted">Arrive together and leave on your schedule for concerts, games, and private events.</p>
+          <ul>
+            <li>Group coordination</li>
+            <li>Flexible pickup windows</li>
+            <li>Ideal for nights out</li>
+          </ul>
+        </div>
+        <div class="card">
+          <h3>Corporate Travel</h3>
+          <p class="muted">Professional service for executives, clients, and business travel.</p>
+          <ul>
+            <li>Quiet, private rides</li>
+            <li>On-time arrivals</li>
+            <li>Single or recurring bookings</li>
+          </ul>
+        </div>
+        <div class="card">
+          <h3>Weddings + Celebrations</h3>
+          <p class="muted">Make the day seamless with coordinated transportation for guests and VIPs.</p>
+          <ul>
+            <li>Schedule planning</li>
+            <li>Group-friendly vehicles</li>
+            <li>Reliable arrival windows</li>
+          </ul>
+        </div>
+        <div class="card">
+          <h3>Group Outings</h3>
+          <p class="muted">From dinner to downtown, we keep groups together and on time.</p>
+          <ul>
+            <li>Sprinter van capacity</li>
+            <li>Door-to-door service</li>
+            <li>Ideal for reunions and parties</li>
+          </ul>
+        </div>
+        <div class="card">
+          <h3>Custom Itineraries</h3>
+          <p class="muted">Multiple stops or a full-day itinerary? We build the plan around you.</p>
+          <ul>
+            <li>Hourly availability</li>
+            <li>Multi-stop routing</li>
+            <li>Personalized scheduling</li>
+          </ul>
+        </div>
+      </div>
     </div>
+  </section>
 
-  </div>
+  <section class="section">
+    <div class="container grid two">
+      <div class="card">
+        <h3>How It Works</h3>
+        <ul>
+          <li>Text your pickup, drop-off, date, and party size.</li>
+          <li>We confirm availability and send a fast quote.</li>
+          <li>Lock it in and ride with a professional chauffeur.</li>
+        </ul>
+        <div class="card-note">Most quotes delivered within minutes.</div>
+      </div>
+      <div class="card">
+        <h3>Why Concord Limo</h3>
+        <ul>
+          <li>Licensed and insured</li>
+          <li>Clean, well-maintained vehicles</li>
+          <li>Professional chauffeurs</li>
+          <li>Philadelphia area expertise</li>
+        </ul>
+        <div class="card-note">Ask about Sprinter availability for large groups.</div>
+      </div>
+    </div>
+  </section>
 </main>
 
 <div data-include="footer"></div>
 
 <script src="../js/main.js"></script>
 <script src="../js/partials.js"></script>
-
-<script>document.getElementById("year").textContent=new Date().getFullYear()</script>
 </body>
 </html>
