--- a/pages/fleet.html
+++ b/pages/fleet.html
@@ -1,7 +1,6 @@
 <!--
   Developed by: Max Eldabbas (maxeldabbas86@gmail.com)
-  Repo: https://github.com/maxeld1/industrysalon
-  Created: 2025-12-10
+  Repo: https://github.com/maxeld1
   License: Proprietary — Not for redistribution without permission.
 -->
 <!doctype html>
@@ -9,227 +8,102 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>Industry Salon | Meet the Team</title>
-  <meta name="description" content="Industry Salon — modern cuts, color, nails and skincare. Book online or call." />
-  <link rel="icon" href="../assets/icons/favicon.ico" />
-  <link rel="manifest" href="../manifest.webmanifest" />
+  <title>Concord Limo | Fleet</title>
+  <meta name="description" content="Explore Concord Limo's fleet of luxury SUVs and Sprinter vans for Philadelphia and surrounding areas. Group-ready, chauffeur-driven rides." />
+
+  <link rel="icon" href="../assets/icons/concord-favicon.png" type="image/png" />
   <link rel="stylesheet" href="../css/style.css" />
-  <meta property="og:title" content="Industry Salon — Hair • Beauty • Nails" />
-  <meta property="og:description" content="Modern salon in [City]. Book online or call." />
+
+  <meta property="og:title" content="Concord Limo | Fleet" />
+  <meta property="og:description" content="Luxury SUV and Sprinter van options for events, airports, and group travel." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://example.com" />
-  <meta property="og:image" content="https://example.com/og-image.jpg" />
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "HairSalon",
-    "name": "Industry Salon",
-    "telephone": "(484) 420-4082",
-    "priceRange": "$$",
-    "address": {
-      "@type": "PostalAddress",
-      "streetAddress": "4631 W. Chester Pike",
-      "addressLocality": "Newtown Square",
-      "addressRegion": "PA",
-      "postalCode": "19073",
-      "addressCountry": "US"
-    },
-    "openingHours": ["Mo-Thurs 09:00-20:00","Fri-Sa 08:00-14:00"],
-    "url": "https://www.industrysalonlounge.com",
-    "sameAs": ["https://instagram.com/industrysalonnewtownsquare"]
-  }
-  </script>
+  <meta property="og:url" content="" />
+  <meta property="og:image" content="" />
 </head>
 <body>
 
 <div data-include="header"></div>
 
-<main class="section">
-  <div class="container">
-    <h1 class="page-title">MEET THE TEAM</h1>
+<main>
+  <section class="section page-hero">
+    <div class="container">
+      <div class="kicker">Luxury SUV + Sprinter Vans</div>
+      <h1 class="page-title">Fleet Built for Every Group Size</h1>
+      <p class="page-lead">Choose the right ride for airport transfers, nights out, and event transportation in Philadelphia.</p>
+      <div class="hero-actions">
+        <a class="btn btn-primary" href="sms:+16105471325?body=Hi%20Concord%20Limo%2C%20I%27d%20like%20a%20quote%20for%20a%20ride%20in%20Philadelphia.">Text for Quote</a>
+        <a class="btn btn-glass" href="../services/">View Services</a>
+      </div>
+    </div>
+  </section>
 
-    <div class="grid three team-grid">
-      <article class="card team-card">
-        <div class="team-top">
-          <h3 class="team-name">Mary Beth</h3>
-
-          <div class="team-level-wrap">
-            <div class="team-level-circle">
-              <span class="level-label">Level</span>
-              <span class="level-number">8</span>
-            </div>
+  <section class="section">
+    <div class="container grid two fleet-grid">
+      <article class="vehicle-card">
+        <div class="vehicle-preview suv" aria-hidden="true"></div>
+        <div class="vehicle-body">
+          <h3>Cadillac Luxury SUV</h3>
+          <p class="muted">Private, quiet rides for airport transfers, corporate travel, and nights out.</p>
+          <div class="chip-row">
+            <span class="chip">Seats 1-6</span>
+            <span class="chip">Luggage friendly</span>
+            <span class="chip">Tinted privacy glass</span>
           </div>
-
-          <div class="team-title">Owner / Stylist / Educator</div>
-        </div>
-
-        <div class="team-bio">
-          <p>Industry’s owner Mary Beth is a passionate hairstylist, wife, and mom of three, living and raising her family in the same community of her salon. With over 20 years of experience, hair has always been more than a career—it’s a way to build trust, create meaningful connections, and help clients feel confident as the best version of themselves.</p>
-          <p>She specializes in customized color, effortless lived-in styles, and wedding and formal styling, with a strong focus on detail and intentional work. After years behind the chair, Mary Beth created a salon space that reflects what she values most: a relaxed, welcoming environment rooted in quality, continued education, and genuine care.</p>
-          <p>Every appointment is about more than great hair—it’s about confidence, comfort, and making each client feel truly seen.</p>
+          <ul class="fleet-list">
+            <li>Comfortable leather seating</li>
+            <li>Climate control for every passenger</li>
+            <li>Ideal for smaller groups and VIP travel</li>
+          </ul>
         </div>
       </article>
 
-      <article class="card team-card">
-        <div class="team-top">
-          <h3 class="team-name">Lisa</h3>
-
-          <div class="team-level-wrap">
-            <div class="team-level-circle">
-              <span class="level-label">Level</span>
-              <span class="level-number">7</span>
-            </div>
+      <article class="vehicle-card">
+        <div class="vehicle-preview sprinter" aria-hidden="true"></div>
+        <div class="vehicle-body">
+          <h3>Mercedes Sprinter Van</h3>
+          <p class="muted">Group-ready transportation for events, celebrations, and airport shuttles.</p>
+          <div class="chip-row">
+            <span class="chip">Seats 7-14</span>
+            <span class="chip">Event-ready</span>
+            <span class="chip">Extra luggage space</span>
           </div>
-
-
-          <div class="team-title">Co-Founder / Stylist / Educator</div>
-        </div>
-
-        <div class="team-bio">
-          <p>As a co-founder, Level 7 Stylist, and Redken Artist, Lisa brings extensive expertise and passion to every guest experience. With advanced training in cutting, coloring, styling, and wedding hair, Lisa specializes in creating customized looks that enhance each guest’s individuality and lifestyle.</p>
-          <p>Certified in Redken Hair Color and Design (cutting), and recognized as a Redken Specialist, Lisa has worked on Redken photoshoots and commercials and travels nationally to educate and inspire other salons through Redken education. Each year, she also attends ongoing trainings in NYC, LA, and Las Vegas to stay inspired and ahead of trends.</p>
-          <p>At the heart of her work, she believes in delivering an exceptional guest experience—one that is personalized, elevated, and fun. Every service is thoughtfully tailored to meet each guest’s needs while creating an atmosphere that is both professional and enjoyable.</p>
-        </div>
-      </article>
-
-      <article class="card team-card">
-        <div class="team-top">
-          <h3 class="team-name">Sam</h3>
-
-          <div class="team-level-wrap">
-            <div class="team-level-circle">
-              <span class="level-label">Level</span>
-              <span class="level-number">4</span>
-            </div>
-          </div>
-
-          <div class="team-title">Stylist</div>
-        </div>
-
-        <div class="team-bio">
-          <p>With nearly 11 years in the beauty industry, Sam began her journey as a shampoo assistant and has spent the past nine years refining her craft behind the chair. She is deeply passionate about building meaningful connections with her clients and helping them feel like the best versions of themselves—inside and out.</p>
-          <p>While she offers a wide range of services, her true creative passion lies in the art of hair color. She finds great fulfillment in transforming not only hair, but also the confidence of each client she works with.</p>
-          <p>A strong believer in continued education, Sam is always striving to grow, learn, and stay at the forefront of industry trends and techniques. She is thrilled to begin this new chapter at Industry Salon, working alongside a team of talented women she trusts and admires. Together, they are committed to creating a welcoming, elevated environment where every client feels valued, confident, and beautiful.</p>
-        </div>
-      </article>
-
-      <article class="card team-card">
-        <div class="team-top">
-          <h3 class="team-name">Ali</h3>
-
-          <div class="team-level-wrap">
-            <div class="team-level-circle">
-              <span class="level-label">Level</span>
-              <span class="level-number">1</span>
-            </div>
-          </div>
-
-          <div class="team-title">Stylist / Content Coordinator</div>
-        </div>
-
-        <div class="team-bio">
-          <p>Ali is focused on growing her career, while loving what she does, making people feel beautiful. Always open to learning new things and being a team player, Ali works hard to create a comfortable, welcoming vibe where clients can relax, trust the process, and leave the chair feeling confident, refreshed, and happy.</p>
-
-        </div>
-      </article>
-
-      <article class="card team-card">
-        <div class="team-top">
-          <h3 class="team-name">Bri</h3>
-
-          <div class="team-level-wrap">
-            <div class="team-level-circle">
-              <span class="level-label">Level</span>
-              <span class="level-number">5</span>
-            </div>
-          </div>
-
-          <div class="team-title">Stylist / Extension Specialist</div>
-        </div>
-
-        <div class="team-bio">
-          <p>Bri has over 10 years of experience in the hair industry and specializes in all aspects of hair, including color, cutting, and formal styling. Her true passion lies in blonding services and creating dimensional, lived-in, and natural-looking color. Bri is certified in hand-tied extensions and loves helping clients achieve their dream hair by adding length, fullness, and confidence—especially for those with finer hair. She is dedicated to making every client look and feel their absolute best.</p>
-        </div>
-      </article>
-
-      <article class="card team-card">
-        <div class="team-top">
-          <h3 class="team-name">Brianna</h3>
-
-          <div class="team-level-wrap">
-            <div class="team-level-circle">
-              <span class="level-label">Level</span>
-              <span class="level-number">4</span>
-            </div>
-          </div>
-
-          <div class="team-title">Stylist / Wax Specialist</div>
-        </div>
-
-        <div class="team-bio">
-          <p>With over 9 years in the hair industry, Brianna has built a career rooted in passion, creativity, and dedication. She knew she wanted to do hair from the time she was little, and turning that dream into reality has been incredibly rewarding. Loving what she does every day, she takes pride in helping her clients feel confident and beautiful through her work.</p>
-        </div>
-      </article>
-
-      <article class="card team-card">
-        <div class="team-top">
-          <h3 class="team-name">Maria</h3>
-
-          <div class="team-level-wrap">
-            <div class="team-level-circle">
-              <span class="level-label">Level</span>
-              <span class="level-number">3</span>
-            </div>
-          </div>
-
-          <div class="team-title">Stylist</div>
-        </div>
-
-        <div class="team-bio">
-          <p>Maria has been in the beauty industry for nearly eight years, and her passion for hair continues to grow. She knew from a young age that this was the career she wanted, and she feels grateful to turn that childhood dream into her everyday work. Helping clients feel confident and amazing when they leave her chair is what she loves most.</p>
-        </div>
-      </article>
-
-      <article class="card team-card">
-        <div class="team-top">
-          <h3 class="team-name">Dana</h3>
-
-          <div class="team-title">Front Desk Specialist / Scheduling & Client Care</div>
-        </div>
-
-        <div class="team-bio">
-          <p>With 18 years of experience as a receptionist, Dana thrives in customer service and enjoys creating a welcoming experience for every client. She loves connecting with people, building genuine relationships, and is proud to be part of a supportive team. Outside of the salon, she enjoys spending time with her three children and her husband!</p>
-        </div>
-      </article>
-
-      <article class="card team-card">
-        <div class="team-top">
-          <h3 class="team-name">Leia</h3>
-
-          <div class="team-level-wrap">
-            <div class="team-level-circle">
-              <span class="level-label">Level</span>
-              <span class="level-number">5</span>
-            </div>
-          </div>
-
-          <div class="team-title">Stylist</div>
-        </div>
-
-        <div class="team-bio">
-          <p>Leia was born and raised right here in our community, Leia now lives locally with her husband and three amazing children. She began her hair journey at Arrojo Academy in SoHo, New York, graduating in 2013 after training under some of the industry’s most renowned stylists.</p>
-          <p>With a strong foundation in cutting, coloring, and styling, Leia is known for her keen eye for detail and dedication to quality. She’s passionate about helping every client feel confident, beautiful, and truly their best. From behind the chair to on-site bridal, Leia’s experience and heart for her craft make her such a special part of The Industry team.</p>
+          <ul class="fleet-list">
+            <li>Roomy interior for groups and gear</li>
+            <li>Easy entry for quick pickups</li>
+            <li>Perfect for weddings and group nights out</li>
+          </ul>
         </div>
       </article>
     </div>
-  </div>
+  </section>
+
+  <section class="section">
+    <div class="container">
+      <h2 class="section-title">Onboard Experience</h2>
+      <div class="grid three">
+        <div class="card card-center">
+          <h3>Professional Chauffeurs</h3>
+          <p class="muted">Courteous drivers, clean vehicles, and consistent arrival windows.</p>
+        </div>
+        <div class="card card-center">
+          <h3>Comfort First</h3>
+          <p class="muted">Quiet, climate-controlled rides with privacy in mind.</p>
+        </div>
+        <div class="card card-center">
+          <h3>Flexible Scheduling</h3>
+          <p class="muted">We align pickup times to your event or flight schedule.</p>
+        </div>
+      </div>
+      <div class="section-cta">
+        <a class="btn btn-primary" href="sms:+16105471325?body=Hi%20Concord%20Limo%2C%20I%27d%20like%20a%20quote%20for%20a%20ride%20in%20Philadelphia.">Text for Quote</a>
+      </div>
+    </div>
+  </section>
 </main>
 
 <div data-include="footer"></div>
-  
+
 <script src="../js/main.js"></script>
 <script src="../js/partials.js"></script>
-  
-<script>document.getElementById("year").textContent=new Date().getFullYear()</script>
 </body>
 </html>
