massive changes to site

--- a/index.html
+++ b/index.html
@@ -108,17 +108,17 @@ SEO
         </p>
 
         <div class="hero-actions">
-          <a class="btn btn-primary" href="sms:+16105477845?body=Hi%20Concord%20Limo%2C%20I%27d%20like%20a%20quote%20for%20a%20ride%20in%20Philadelphia." aria-label="Text for a quote">
+          <a class="btn btn-primary" href="sms:+16105471325?body=Hi%20Concord%20Limo%2C%20I%27d%20like%20a%20quote%20for%20a%20ride%20in%20Philadelphia." aria-label="Text for a quote">
             Text for Quote
           </a>
-          <a class="btn btn-glass" href="fleet/" aria-label="View fleet">
+          <a class="btn btn-glass" href="pages/fleet.html" aria-label="View fleet">
             View Fleet
           </a>
         </div>
 
         <div class="hero-contact">
           <span class="muted">Text:</span>
-          <a href="sms:+16105477845"> (610) 547-7845</a>
+          <a href="sms:+16105471325"> (610) 547-7845</a>
         </div>
 
         <div class="hero-trust">
@@ -188,7 +188,7 @@ SEO
       </div>
 
       <div class="section-cta">
-        <a class="btn btn-primary" href="sms:+16105477845?body=Hi%20Concord%20Limo%2C%20I%27d%20like%20a%20quote%20for%20a%20ride%20in%20Philadelphia.">
+        <a class="btn btn-primary" href="sms:+16105471325?body=Hi%20Concord%20Limo%2C%20I%27d%20like%20a%20quote%20for%20a%20ride%20in%20Philadelphia.">
           Text for Quote
         </a>
       </div>
@@ -246,7 +246,7 @@ SEO
       </div>
 
       <div class="reviews-cta" style="margin-top:22px;">
-        <a class="btn btn-primary" href="sms:+16105477845?body=Hi%20Concord%20Limo%2C%20I%27d%20like%20a%20quote%20for%20a%20ride%20in%20Philadelphia.">Text for Quote</a>
+        <a class="btn btn-primary" href="sms:+16105471325?body=Hi%20Concord%20Limo%2C%20I%27d%20like%20a%20quote%20for%20a%20ride%20in%20Philadelphia.">Text for Quote</a>
       </div>
     </div>
   </section>
