--- a/contact/index.html
+++ b/contact/index.html
@@ -71,7 +71,7 @@
           <path d="M22 16.9v2.1a2 2 0 0 1-2.2 2 19 19 0 0 1-8.3-3.3 18.6 18.6 0 0 1-5.8-5.8A19 19 0 0 1 2.4 3.6 2 2 0 0 1 4.4 1.4h2.1A2 2 0 0 1 8.5 3l.5 2.3a2 2 0 0 1-.5 1.8L7 8.6a15.5 15.5 0 0 0 8.4 8.4l1.5-1.5a2 2 0 0 1 1.8-.5l2.3.5a2 2 0 0 1 1.5 1.4Z"/>
         </svg>
         <span class="contact-text">
-            <a href="tel:+16105477845">(610) 547-7845</a>
+            <a href="tel:+16105471325">(610) 547-7845</a>
             <span style="display:block; font-size:.95rem; opacity:.75; margin-top:4px;">
               Call or text for fastest response
             </span>
@@ -120,10 +120,10 @@
 
       <!-- CTA -->
       <div style="display:flex; gap:12px; justify-content:center; flex-wrap:wrap; margin-top:10px;">
-        <a class="btn btn-primary" href="../contact/">
+        <a class="btn btn-primary" href="../pages/contact.html">
           Request a Quote
         </a>
-        <a class="btn btn-glass" href="tel:+16105477845">
+        <a class="btn btn-glass" href="tel:+16105471325">
           Call Now
         </a>
       </div>
