massive changes to site

--- a/pages/fleet.html
+++ b/pages/fleet.html
@@ -32,7 +32,7 @@
       <p class="page-lead">Choose the right ride for airport transfers, nights out, and event transportation in Philadelphia.</p>
       <div class="hero-actions">
         <a class="btn btn-primary" href="sms:+16105471325?body=Hi%20Concord%20Limo%2C%20I%27d%20like%20a%20quote%20for%20a%20ride%20in%20Philadelphia.">Text for Quote</a>
-        <a class="btn btn-glass" href="services.html">View Services</a>
+        <a class="btn btn-glass" href="pages/services.html">View Services</a>
       </div>
     </div>
   </section>
