--- a/pages/services.html
+++ b/pages/services.html
@@ -32,7 +32,7 @@
       <p class="page-lead">From airport transfers to group celebrations, we deliver reliable rides across Philadelphia and surrounding areas.</p>
       <div class="hero-actions">
         <a class="btn btn-primary" href="sms:+16105471325?body=Hi%20Concord%20Limo%2C%20I%27d%20like%20a%20quote%20for%20a%20ride%20in%20Philadelphia.">Text for Quote</a>
-        <a class="btn btn-glass" href="fleet.html">View Fleet</a>
+        <a class="btn btn-glass" href="pages/fleet.html">View Fleet</a>
       </div>
     </div>
   </section>
